<resources>
    <string name="app_name">Sport Massage</string>
    <string name="supported_by">Supported by</string>
    <string name="front_side">Tampak Depan</string>
    <string name="back_side">Tampak Belakang</string>
    <string name="keteranganmanipulassi">Klik nama yang ada pada bagian tubuh</string>
    <string name="titleSlide1">Selamat Datang Di Aplikasi Pengenalan Massage</string>
    <string name="descSlide1">Aplikasi ini Berisi Tentang bagaimana cara sport massage yang baik dan benar.\n\n
    Berisi video-video tutorial menarik yang memudahkan anda dalam melakukan pembelajaran sport massage secara mandiri.
    </string>
    <string name="titleSlide2">Menggunakan Circle Menu</string>
    <string name="sejarah">• Sejarah Massage</string>
    <string name="sejarahpoin">
        • Bangsa Cina kurang lebih dari 3000 tahun sebelum masehi dalam buku suci orang cina yang “Kong Fu” bahwa mengurut tubuh dan menarik persendian sebagai cara pengobatan.\n
        • Bapak dari ilmu kedokteran yaitu Hippocrates (430-360 SM) menulis bahwa massage dapat memperkuat persendian yang lemah dan dapat memperbaiki persendian yang kaku.\n
        • Geleneus seorang dokter Yunani yang berhasil memperkenalkan massage di Romawi.\n
        • Pehr Hendrik Ling (1776-1839) menggariskan dasar-dasar senam dan massage swedia.
    </string>
    <string name="sejarahsumber">(Darni,2018,hlm,8-9)</string>
    <string name="massagemenurutahli">• Massage menurut ahli</string>
    <string name="massagemenurutahlidesc">\t\t\tKata massage berasal dari kata arab “mash”yang berarti “menekan dengan lembut” atau kata Yunani “massien” yang berarti “memijat” atau “melulut”. Selanjutnya massage disebut pula ilmu pijat atau ilmu lulut. Para pelakunya biasa disebut sebagai masseur untuk pria dan masseus untuk wanita. </string>
    <string name="massagesumber1">(Setiawan,2015,hlm,4)</string>
    <string name="massagepoin1">
    • Beard dan Wood (1964) massage merupakan “Suatu istilah yang digunakan untuk menerangkan manipulasi-manipulasi pada jaringan lunak badan seseorang yang dilaksanakan dengan tangan”.\n
    • Depsos RI (1998) mendefinisikan “Massage sebagai pijat yang telah disempurnakan dengan ilmu-ilmu tentang tubuh manusia, dilakukan pada tubuh seseorang dengan bermacam-macam bentuk pegangan dan manipulasi”.
    </string>
    <string name="massagesumber2">(Darni,2018,hlm,3)</string>
    <string name="massagedesc2">Sedangkan sport massage menurut para ahli yaitu:</string>
    <string name="massagepoin2">
    • Darni (2018:7) “Massage olahraga (sport massage) adalah pijatan yang dimanfaatkan dalam bidang keolahrgaan dengan tujuan untuk membentuk dan memelihara kondisi badan, mempersiapkan, meningkatkan kerja fisik, dan menghilangkan akibat melakukan olahraga yang merugikan seperti kelelahan dan sebagainya”.\n
    • Wijanarko dkk (2010:9) “Sport massage adalah massage yang khusus digunakan dan diberikan pada orang-orang yang sehat badannya, terutama olahragawan”.
    </string>
    <string name="macammassage">• Macam-Macam Massage</string>
    <string name="macammasagepoin">
    1. Sport Massage\n
    \t\tMassage Olahraga adalah massage yang khusus digunakan atau diberikan kepada orang-orang yang sehat badannya, terutama olahragawan. Diberikan hanya kepada orang yang sehat ke bagian badan, serta macam dan cara memijatnya yang lebih diutamakan kepada pengaruhnya terhadap kelancaran peredaran darah.\n
    2. Massage Penyembuhan\n
    \t\tMassage Penyembuhan yaitu massage yang ditujukan untuk membantu penyembuhan terhadap gangguan atau kelainan-kelainan fisik, gangguan pada bagian-bagian tubuh tertentu yang terutama disebabkan oleh cuaca, kerja yang kelewatan batas, perkosaan atau paksaan (trauma) pada badan serta kelainan-kelainan fisik yang disebabkan oleh penyakit tertentu.\n
    3. Massage Kecantikan\n
    \t\tMassage Kecantikan adalah massage yang khusus ditujukan untuk memelihara serta meningkatkan kecantikan dan keindahan, baik kecantikan muka maupun keindahan tubuh beserta bagian-bagiannya.
    </string>
    <string name="macammasagesumber">(Setiawan,2015,hlm,4-6).</string>
    <string name="tujuanmassage">• Tujuan Massage Olahraga</string>
    <string name="tujuanmassagepoin">
    1. Preparatif, mempersiapkan faktor psikosomatif atlet atau olahragawan dengan baik.\n
    2. Preventif, memfungsikan alat gerak (motorik) atau alat kordinasi secara baik, dan memperkecil kemungkinan terjadinya cedera.\n
    3. Kuratif, untuk penyembuhan cedera ringan yang dialami olahragwan.
    </string>
    <string name="tujuanmassagesumber">(Darni,2018,hlm,11-12)</string>
    <string name="kontra">• Kontra indikasi penggunaan massage</string>
    <string name="kontradesc">Kontra indikasi dalam massage sama artinya dengan pantangan massage atau suatu keadaan yang menyebabkan seseorang tidak boleh dimassage. Contoh beberapa kontra indikasi dalam massage adalah sebagai berikut.</string>
    <string name="kontrapoin">
    1. Sedang menderita penyakit menular (Tifus, Kolera, Disentri, Tuberkulose).\n
    2. Demam malaria.\n
    3. Penyakit kulit (Kadas, Kurap, Kudis, Panu atau Panau, Lepra, Kusta, Cacar, Morbili, Campak).\n
    4. Bermacam peradangan (Raadang kulit, Radang otot, Radang usus buntu).\n
    5. Tumor.\n
    6. Sedang hamil.\n
    7. Sedang datang bulan.\n
    8. Patah tulang (Fraktura).\n
    9. Asma jantung.\n
    10. Sehabis operasi.\n
    11. Kurang dari 1.5-2 jam setelah makan.\n
    12. Panas tinggi (lebih dari 38\u00B0 C).
    </string>
    <string name="kontrasumber">(Darni,2018:20-21)</string>
    <string name="contohsusunan">• Contoh susunan massage yang dapat dilakukan pada setiap bagian tubuh</string>
    <string name="telungkup">TELUNGKUP</string>
    <string name="telungkuppoin">
        1.	Paha belakang (Effleurage, Petrissage, Walken, Shaking, Effleurage)\n
        2.	Betis belakang (Effleurage, Petrissage, Shaking, Effleurage)\n
        3.	Tumit-telapak kaki (Effleurage, Petrissage, Effleurage)\n
        4.	Pinggang-punggung (Effleurage, Friction, Walken, Tapotement, Vibration, Skin rolling, Effleurage)\n
        5.	Pantat (Effleurage, Petrissage, Walken, Tapotement, Effleurage)
    </string>
    <string name="telentang">TELENTANG</string>
    <string name="telentangpoin">
    1.	Paha depan (Effleurage, Petrissage, Shaking, Effleurage)\n
    2.	Betis depan (Effleurage, Petrissage, Shaking, Effleurage)\n
    3.	Punggung dan jari kaki (Effleurage, Petrissage, Effleurage)\n
    4.	Dada (Effleurage, Friction, Walken, Vibration, Effleurage)\n
    5.	Perut (Effleurage, Walken, Vibration, Effleurage)\n
    6.	Lengan atas bawah (Effleurage, Petrissage, Shaking, Effleurage)\n
    7.	Punggung tangan (Effleurage, Petrissage, Effleurage)\n
    8.	Telapak dan jari-jari tangan (Effleurage, Petrissage, Effleurage)
    </string>
    <string name="posisiduduk">POSISI DUDUK</string>
    <string name="posisidudukpoin">
    1.	Bahu (Effleurage, Petrissage, Shaking, Effleurage)\n
    2.	Kepala dan dahi (Effleurage, Friction, Petrissage, Tapotement, Effleurage)\n
    </string>
    <string name="manfaatmassage">• Manfaat sport massage bagi jaringan tubuh</string>
    <string name="jaringansaraf">a. Jaringan Saraf</string>
    <string name="jaringansarafpoin">
    1)	Mengentro secara sadar di dalam sistem saraf pusat dan sistem saraf perifer.\n
    2)	Mempercepat pasokan darah pada sistem sarf pusat dan sistem saraf perifer.\n
    3)	Mengurang rintangan persepsi dan mempercepat reaksi saraf.
    </string>
    <string name="jaringankulit">b. Jaringan Kulit</string>
    <string name="jaringankulitpoin">
     1)	Memperlancar peredaran darah di dalam vena.\n
    2)	Memperluas pembuluh denyut.\n
    3)	Meninggikan kekuatan tegangan otot kulit.\n
    4)	Melembutkan kulit.\n
    5)	Memperbaiki metabolism
    </string>
    <string name="jaringanotot">c. Jaringan Otot</string>
    <string name="jaringanototpoin">
     1)	Mengontrol perangsangan di dalam sistem otot.\n
    2)	Mengontrol kontraksi otot dan pendorongan otot.\n
    3)	Memulihkan stamina dan kemampuan olahraga.\n
    4)	Menyembuhkan ceddera otot dan mengembalikan elastisitas otot.\n
    5)	Memperlancar pasokan darah untuk memperkuat otot.\n
    6)	Mengaktifkan energy otot.\n
    7)	Meningkatkan 5-7 kali kemampuan otot dalam olahraga.
    </string>
    <string name="peredarandarah">d. Peredaran darah</string>
    <string name="pereadarandarahpoin">
    1)	Mempercepat peredaran darah.\n
    2)	Memperlancar pasokan oksigen.\n
    3)	Mempercepat pasokan gizi ke darah.\n
    4)	Memperbesar fungsi pembuluh kapiler.\n
    5)	Menaikkan kuantitas sel darah putih dan sel darah merah.\n
    6)	Memperbaiki pasokan gizi ke dalm jaringan tubuh.\n
    7)	Menutup meresapnya bakteri ke dalam jaringan.\n
    8)	Mempercepat kenaikkan sekresi kencing.\n
    9)	Mempercepat sekresi air.\n
    10)	Memperbaiki metabolisme dalam otot.\n
    11)	Membuat pernapasan teratur.\n
    12)	Menguatkan sistem otot pernapasan.
    </string>
    <string name="sifatmassage">• Sifat dan Pengaruh Massage</string>
    <string name="sifat">a. Sifat</string>
    <string name="sifatpoin">
    1)	Menenangkan (sedatif).\n
    2)	Menggerakkan (stimulared).\n
    3)	Menghilangkan rasa sakit.\n
    4)	Menghilangkan bahan kotoran (deplotorich).\n
    5)	Membersihkan dan menyehatkan kulit (desquamatif).\n
    6)	Menyenangkan pikiran (psychis)
    </string>
    <string name="pengaruh">b. Pengaruh</string>
    <string name="kulit">1) Kulit</string>
    <string name="kulitpoin">
    a)	Desquamatif, kulit yang dimassage jadi bersih.\n
    b)	Diplotorich, pada kulit yang di massage terjadi reaksi dalam kulit/otot tubuh sehingga merangsang keluarnya cairan/kotoran dari tubuh.\n
    c)	Terjadi panas.
    </string>
    <string name="otot">2) Otot</string>
    <string name="ototpoin">
    a)	Stimulared, merangsang gerakan-gerakan tubuh.\n
    b)	Sendatif, otot yang mengalami kelelahan akan mengalami pengenduran dan relaksasi.\n
    c)	Deplotorich, akan memperlancar peredaran darah sehingga penumpukkan asam laktat dapat dikurangi, kelelahan dapat disembuhkan.
    </string>
    <string name="persendian">3) Persendian</string>
    <string name="persendianpoin">
    a)	Stimulared, merangsang gerak persendian, mencegah cedera dan menyiapkan gerakan yang lebih luas.\n
    b)	Diplotorich, mencegah kelelahan yang terjadi pada persendian.
    </string>
    <string name="saraf">4)	Saraf</string>
    <string name="sarafpoin">
    a)	Sendatif, menenangkan (pasien yang dipijat merasa nyaman)
    b)	Phychis, menyatakan yang sakit jadi sembuh
    </string>
    <string name="manfaatsumber">(Setiawan,2015,hlm,6-10)</string>
    <string name="referensi">Referensi</string>
    <string name="setiawan">Setiawan, Arif. (2015). Sport Massage. Yogyakarta: Magnum Pustaka Utama.</string>
    <string name="darni">Darni. (2018). Buku Ajar Massage Olahraga. Depok: Rajawali Pers.</string>
    <string name="wijanarko">Wijanarko, Bambang dan dkk. (2010). Massage Terapi Cedera Olahraga. Surakarta:  Yuma Pustaka.</string>
    <string name="modul">Modul Penataran Sport Massage level 1 Nasional 2019</string>
    <string name="giriwijoyo">Giriwijoyo, Santosa dan Sidiq, Dikdik Jafar. (2020). Ilmu Faal Olahraga. Bandung: PT Remaja Rosdakarya.</string>
    <string name="sarwadi">Sarwadi dan Linangkung, Erfanto. (2014). Buku Pintar Anatomi Tubuh Manusia. Jakarta: Dunia Cerdas</string>
    <string name="pengembang">Pengembang</string>
    <string name="romli">Romli Silianwari</string>
    <string name="masseur1">Masseur 1</string>
    <string name="zulphan">Zulphan</string>
    <string name="masseur2">Masseur 2</string>
    <string name="gilang">Gilang Panji Satria</string>
    <string name="kameramen">Cameraman</string>
    <string name="fauzan">Fauzan Ilham</string>
    <string name="pasien1">Pasien 1</string>
    <string name="agil">Agil Alwiansyah</string>
    <string name="pasien2">Pasien 2</string>
</resources>